--- a/kasa/src/styles/Location.scss
+++ b/kasa/src/styles/Location.scss
@@ -35,7 +35,7 @@
     }
     @media (max-width: 480px) {
       position: absolute;
-      top: 175%;
+      top: 189%;
       left: 55%;
     }
     @media (max-width: 400px) {
